--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -75,6 +75,14 @@
             android:textSize="16dip"
             android:onClick="iniciarTelaCadastro"
             />
+        <TextView
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:text="Esqueceu sua senha? Clique aqui"
+            android:id="@+id/link_recuperar"
+            android:gravity="center"
+            android:textSize="16dip"
+            android:onClick="esqueceuSuaSenha" />
 
     </LinearLayout>
 </ScrollView>
