--- a/app/src/main/res/layout/activity_missao.xml
+++ b/app/src/main/res/layout/activity_missao.xml
@@ -18,18 +18,22 @@
     android:layout_height="match_parent"
     android:orientation="vertical" >
 
-    <!--<fragment
-        android:id="@+id/fragment_map"
+    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:id="@+id/fragment_map"
+        tools:context=".MapsActivity"
         android:layout_weight="50"
-        />-->
-    <Button
+        android:name="com.google.android.gms.maps.SupportMapFragment"
+        class="com.google.android.gms.maps.MapFragment"/>
+
+   <!-- <Button
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_weight="50"
         android:background="@color/alienColor1"
-        />
+        />-->
 
     <RelativeLayout
         android:layout_width="match_parent"
