Mapa funcionando! Ainda com mensagens de debug :)

--- a/app/src/main/res/layout/activity_cadastro.xml
+++ b/app/src/main/res/layout/activity_cadastro.xml
@@ -98,7 +98,7 @@
             android:layout_marginBottom="24dp"
             android:padding="12dp"
             android:text="Registrar"
-            android:onClick="autenticar"
+            android:onClick="cadastrar"
             style="@style/Widget.AppCompat.Button.Colored"
             />
 
