POST Jogador e CadastroActivity funcionando.

--- a/app/src/main/res/layout/activity_cadastro.xml
+++ b/app/src/main/res/layout/activity_cadastro.xml
@@ -13,6 +13,7 @@
         android:paddingTop="56dp"
         android:paddingLeft="24dp"
         android:paddingRight="24dp"
+        android:focusableInTouchMode="true"
         >
         <TextView
             android:text="Survive the Aliens"
