--- a/app/src/main/res/layout/activity_principal.xml
+++ b/app/src/main/res/layout/activity_principal.xml
@@ -107,6 +107,7 @@
             android:layout_height="130dp"
             android:layout_weight="1"
             android:text="Perfil"
+            android:onClick="abrirPerfil"
             android:layout_marginBottom="24dp"
             android:layout_marginRight="10dp"
             android:padding="12dp"
