--- a/app/src/main/res/layout/activity_missao.xml
+++ b/app/src/main/res/layout/activity_missao.xml
@@ -9,10 +9,8 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.ep4.carla.survivethealiens.Activity.MissaoActivity">
-
-
-
 </RelativeLayout>-->
+
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -42,7 +40,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:id="@+id/infotext"
-                android:text="tempo"
+                android:text="Distância"
                 android:gravity="center"
                 android:layout_weight="1"
                 android:layout_marginTop="15dp"
@@ -53,7 +51,7 @@
                 android:layout_height="wrap_content"
                 android:id="@+id/textViewDistancia"
                 android:gravity="center_horizontal"
-                android:text="distância"
+                android:text="Tempo"
                 android:layout_weight="1"
                 android:layout_marginTop="15dp"
                 android:layout_marginBottom="15dp"/>
@@ -67,7 +65,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:id="@+id/textViewTempoValor"
-            android:text="0"
+            android:text="0.0"
                 android:layout_weight="1"
                 android:gravity="center"/>
 
@@ -87,22 +85,35 @@
                 android:layout_weight="1"
                 android:gravity="center"/>
         </LinearLayout>
+
         <LinearLayout
-            android:layout_width="match_parent"
+            android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal">
+            android:orientation="horizontal"
+            >
+
             <Button
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Pause/Resume"
-                android:id="@+id/buttonPauseResume"
-                android:onClick="pausarContinuar"/>
+                android:text="Pausar"
+                android:id="@+id/buttonPausar"
+                android:layout_weight="1"
+                android:onClick="pausar"
+                style="@style/Widget.AppCompat.Button.Colored"
+                />
 
+            <Button
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Continuar"
+                android:id="@+id/buttonContinuar"
+                android:layout_weight="1"
+                android:onClick="continuar"
+                style="@style/Widget.AppCompat.Button.Colored"
+                />
         </LinearLayout>
-
-
-
     </LinearLayout>
+
    <!-- <Button
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -157,12 +168,6 @@
             <!--android:layout_height="wrap_content"-->
             <!--android:layout_below="@id/textViewTempo"-->
             <!--android:layout_centerHorizontal="true"-->
-
             <!--/>-->
-
-
     <!--</RelativeLayout>-->
-
-
-
 </LinearLayout>
