Mantém jogador logado após primeira autenticação. Atributos de hora e quilometros alterados para float. Activity Opcoes criada.

--- a/app/src/main/res/layout/activity_principal.xml
+++ b/app/src/main/res/layout/activity_principal.xml
@@ -105,6 +105,7 @@
             android:padding="12dp"
         style="@style/Widget.AppCompat.Button.Colored"
             android:drawableLeft="@drawable/options32"
+            android:onClick="abrirOpcoes"
         />
 
     </LinearLayout>
