TO DO: Colocar botões para repetir os áudios. DONE: Distancia e tempo independente para cada missão. Tempo e distância são salvos caso o jogador volte para a tela anterior. Missão é bloqueada quando o jogador a finaliza, deixando apenas os botões dos áudios disponíveis. Provavelmente mais coisas que eu não lembro.

--- a/app/src/main/res/layout/activity_missao.xml
+++ b/app/src/main/res/layout/activity_missao.xml
@@ -40,7 +40,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:id="@+id/infotext"
-                android:text="Distância"
+                android:text="Distância (Km)"
                 android:gravity="center"
                 android:layout_weight="1"
                 android:layout_marginTop="15dp"
